# leadgenrationaivoiceagent

./: .dockerignore  .env.example  .gcloudignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.production  LICENSE  Makefile  PRODUCTION_CHECKLIST.md  PRODUCTION_READY.md  QUICKSTART.md  README.md  SECURITY.md  alembic.ini  cloudbuild.manual.yaml  cloudbuild.yaml  deploy.ps1  docker-compose.prod.yml  docker-compose.yml  env.template.md  pyproject.toml  quickstart.py  requirements-dev.txt  requirements.txt  verify_maya_conversation.py
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml  deploy.yml  test.yml
alembic/: env.py
alembic/versions/: 001_initial.py  002_add_users.py  003_add_billing_tables.py
app/: __init__.py  cache.py  cli.py  config.py  config_production.py  exceptions.py  main.py  niches.py  worker.py
app/analytics/: __init__.py  dashboard.py
app/api/: __init__.py  admin.py  ai.py  analytics.py  auth_deps.py  billing.py  campaigns.py  health.py  leads.py  ml_training.py  platform.py  webhooks.py
app/automation/: __init__.py  campaign_manager.py  scheduler.py
app/billing/: __init__.py  payment_gateway.py  subscription.py
app/cache/: __init__.py
app/integrations/: __init__.py  email_sender.py  google_sheets.py  hubspot.py  whatsapp.py
app/lead_scraper/: __init__.py  google_maps.py  indiamart.py  justdial.py  linkedin.py  scraper_manager.py
app/llm/: __init__.py  vertex_client.py
app/middleware/: __init__.py
app/ml/: __init__.py  agent_brain.py  auto_trainer.py  brain_auto_trainer.py  brain_optimizer.py  brain_orchestrator.py  codebase_indexer.py  data_pipeline.py  feedback_loop.py  production_brain.py  training_scheduler.py  vector_store.py  vertex_continuous_trainer.py  vertex_training.py  voice_agent_brain.py
app/models/: user.py
app/platform/: __init__.py  client_journey.py  orchestrator.py  sales_scripts.py  tenant_manager.py
app/scripts/: __init__.py  growth_engine.py  industry_scripts.py  script_loader.py
app/tasks/: __init__.py  brain_training.py  calling.py  reporting.py  scraping.py  sync.py
app/telephony/: __init__.py  call_manager.py  call_transfer.py  exotel_handler.py  twilio_handler.py  webhooks.py
app/utils/: __init__.py  auth.py  dnd_checker.py  logger.py  phone_validator.py  storage.py  validators.py
app/voice_agent/: __init__.py  agent.py  brain.py  conversation.py  free_stt.py  intent_detector.py  llm_brain.py  stt.py  tts.py
auraleads_extracted/: index.html  index.tsx
auraleads_extracted/components/: AIAssistantModal.tsx  Clients.tsx  Settings.tsx  TrainingHub.tsx
auraleads_extracted/components/agents/: VoiceAgentCard.tsx
auraleads_extracted/components/charts/: LeadsChart.tsx
auraleads_extracted/components/training/: PipelineVisualizer.tsx
auraleads_extracted/components/ui/: MultiSelect.tsx  Toggle.tsx  icons.tsx
auraleads_extracted/hooks/: useMockData.ts
docs/: API.md  THREE_BRAIN_ARCHITECTURE.md
frontend/: .env.example  index.html  package.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: AIAssistantModal.tsx  AdminPanel.tsx  BillingPage.tsx  CheckoutModal.tsx  Dashboard.tsx  InvoiceHistory.tsx  LoginPage.tsx  MyCampaign.tsx  PricingPlans.tsx  VoiceAgents.tsx
frontend/src/components/agents/: CallLogPanel.tsx
frontend/src/hooks/: useMockData.ts
frontend/src/services/: api.ts  geminiService.ts
infrastructure/: DEPLOYMENT.md  README.md
infrastructure/nginx/: nginx.conf
infrastructure/terraform/: .terraform.lock.hcl  backend.hcl.example  main.tf  variables.tf
infrastructure/terraform/environments/: production.tfvars  staging.tfvars
revenue_pipeline/: master_leads_20260102_225643.csv
scripts/: create_admin.py  create_admin_direct.py  deploy.sh  deploy_gcp_production.ps1  deploy_gcp_production.sh  deploy_production.sh  setup_gcp.py  setup_secrets.py  startup_check.py  validate_deployment.py
tests/: conftest.py  test_api.py  test_production_ready.py  test_voice_agent.py
(+25 files in other folders)
