[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "leadgen-ai-voice-agent"
version = "1.0.0"
description = "AI-Powered Voice Agent Platform for Automated B2B Lead Generation"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.10"
authors = [
    {name = "LeadGen AI Solutions", email = "tech@leadgenai.com"},
]
keywords = ["ai", "voice-agent", "lead-generation", "b2b", "automation", "saas"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Telephony",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "aioredis>=2.0.0",
    "celery>=5.3.6",
    "openai>=1.12.0",
    "anthropic>=0.18.0",
    "google-generativeai>=0.3.2",
    "google-cloud-aiplatform>=1.42.0",
    "deepgram-sdk>=3.0.0",
    "elevenlabs>=0.3.0",
    "edge-tts>=6.1.9",
    "twilio>=8.10.0",
    "httpx>=0.26.0",
    "aiohttp>=3.9.0",
    "playwright>=1.41.0",
    "beautifulsoup4>=4.12.0",
    "phonenumbers>=8.13.0",
    "loguru>=0.7.2",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.7",
    "APScheduler>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "ruff>=0.1.14",
    "pre-commit>=3.6.0",
]
ml = [
    "chromadb>=0.4.22",
    "sentence-transformers>=2.2.2",
    "scikit-learn>=1.3.2",
    "torch>=2.1.0",
    "faiss-cpu>=1.7.4",
]
monitoring = [
    "sentry-sdk>=1.39.0",
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
]

[project.scripts]
leadgen = "app.cli:main"

[project.urls]
Homepage = "https://leadgenai.com"
Documentation = "https://docs.leadgenai.com"
Repository = "https://github.com/your-org/leadgen-ai-voice-agent"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | alembic
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["app"]
skip = [".venv", "alembic"]

[tool.ruff]
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "alembic",
    "*.pyc",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["alembic", "tests"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=app --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "app/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 70
